--- a/src/App.css
+++ b/src/App.css
@@ -11,55 +11,248 @@ body {
   background: radial-gradient(52.52% 32.71% at 50% 97.66%, rgba(36, 160, 181, 0.20) 0%, rgba(36, 160, 181, 0.00) 100%), #02191D;
   color: #FAFAFA;
 }
-.nav-bar, .progress-bar{
-  margin-top: 10rem;
+button {
+  cursor: pointer;
 }
-.container {
+.nav-bar {
+  display: flex;
+  width: 100%;
+  padding: 12px 16px;
+  justify-content: space-between;
+  align-items: center;
+
+  border-radius: 24px;
+  border: 1px solid #197686;
+  background: rgba(5, 37, 44, 0.40);
+  backdrop-filter: blur(2px);
+}
+.navbar-buttons {
+  display: flex;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.navbar-button{
+  color: #B3B3B3;
+  background: rgba(5, 37, 44, 0.40);
+  border-radius: none;
+}
+.my-tickets-button {
+  display: flex;
+  padding: 16px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 12px;
+  border: 1px solid rgba(213, 234, 0, 0.10);
+  background: #FFF;
+  color: #0A0C11;
+}
+/* .container {
   padding: 4px;
-}
+} */
+.main-content {
+  margin-top: 2rem;
+  border-radius: 40px;
+  border: 1px solid #0E464F;
+  background: #041E23;
+
+  display: flex;
+  width: 500px;
+  padding: 48px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+  margin: 2rem auto 1rem;
+ }
+/* .progress-bar {
+
+  
+} */
 .eventDetails {
-  margin: 1rem;
-  padding: 3rem;
-  box-shadow: rgba(0, 0, 0, 0.6);
+  display: flex;
+  height: 200px;
+  padding: 6px 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+
+  border-radius: 24px;
+  border-right: 2px solid #07373F;
+  border-bottom: 2px solid #07373F;
+  border-left: 2px solid #07373F;
+  background: radial-gradient(57.42% 106.59% at 14.02% 32.06%, rgba(36, 160, 181, 0.20) 0%, rgba(36, 160, 181, 0.00) 100%), rgba(10, 12, 17, 0.10);
+  backdrop-filter: blur(7px);
+}
+.eventDetails h1, .eventDetails p {
+  margin-bottom: 0;
+}
+.line-break{
+  height: 4px;
+  align-self: stretch;
+  background: #07373F;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+label {
+  margin-top: 2rem;
+  align-self: stretch;
+  text-align: left;
+  color: var(--color-grey-98, #FAFAFA);
+
+/* Text/Regular/Normal */
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 150%; /* 24px */
 }
 .ticketButtons {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: flex-start;
+  align-content: flex-start;
+  /* row-gap: 4px; */
+  align-self: stretch;
+  /* flex-wrap: wrap; */
+}
+.ticketButton {
   margin: 1rem;
-  padding :1rem;
+  display: flex;
+  width: 158px;
+  height: 110px;
+  padding: 12px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  cursor: pointer;
+  border-radius: var(--Radius-reg-2, 12px);
+  border: 1px solid #197686;
+  background: #12464E;
+  color: #FFFFFF;
+  margin-bottom: 2rem;
+}
+.ticketButton :active {
+  background-color: #24A0B5;
+}
+select {
+  display: flex;
+  padding: var(--Radius-reg-2, 12px);
+  align-items: center;
+  gap: var(--Radius-reg, 8px);
+  align-self: stretch;
+  border-radius: var(--Radius-reg-2, 12px);
+  border: 1px solid #07373F;
+  background: #12464E;
+  color: #FFFFFF;
+  width: 100%;
+  height: auto;
 }
 
-/* Default Style */
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.navigation-buttons {
+  display: flex;
+  padding: var(--Radius-reg-2, 12px) var(--Radius-semi, 24px);
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex: 1 0 0;
+  margin-top: 2rem;
+  border-radius: var(--Radius-reg, 8px);
+  border: 1px solid #24A0B5;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.navigation-button-cancel {
+  display: flex;
+  padding: var(--Radius-reg-2, 12px) var(--Radius-semi, 24px);
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex: 1 0 0;
+  border-radius: var(--Radius-reg, 8px);
+  border: 1px solid #24A0B5;
+  color: #24A0B5;
+  background: #12464E;
+
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.navigation-button-next {
+  display: flex;
+  padding: var(--Radius-reg-2, 12px) var(--Radius-semi, 24px);
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex: 1 0 0;
+  border-radius: var(--Radius-reg, 8px);
+  background: #24A0B5;
+  color: #FFFFFF;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Attendee Details  */
+.photo-container {
+  display: flex;
+  width: 100%;
+  padding: 48px;
+  flex-direction: column;
+  justify-content: center;
+  align-self: stretch;
+  gap: 32px;
+  border-radius: 24px;
+  border: 1px solid #0E464F;
+  background: #041E23;
+}
+.label-input {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.attendee-input {
+  display: flex;
+  padding: 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 32px;
+  align-self: stretch;
+  width: 100%;
+  border-radius: 12px;
+  border: 1px solid #0E464F;
+  background: #08252B;
+}
+.attendee-label {
+  text-align: left;
+  display: block;
+}
+
+
+/* Ticket Display */
+.booked-ticket-heading {
+  margin-top: 0;
+  text-align: center;
+  margin-bottom: 2rem;
+  /* padding: 1rem; */
+}
+.ticket-details {
+  border-radius: 16px;
+  border: 1px solid #24A0B5;
+  background: rgba(3, 30, 33, 0.10);
+  backdrop-filter: blur(2px);
   }
-  to {
-    transform: rotate(360deg);
-  }
+.attendee-ticket {
+  display: grid;
+  grid-template-columns : 1fr 1fr;
+  gap: 10px;
+  padding: 12px;
+  margin: 12px;
+  /* width: 100%; */
+  text-align: left;
+  border-radius: 8px;
+  border: 1px solid #133D44;
+  /* background: #08343C; */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+/* .attendee-ticket p {
+  
+} */
+.barcode {
+  width: 100%;
 }
